# rust-imap

./: Cargo.toml
src/: client.rs  client_builder.rs  error.rs  lib.rs
src/extensions/: idle.rs  list_status.rs  metadata.rs
