[package]
name = "imap"
version = "3.0.0-alpha.10"
authors = ["Jon Gjengset <jon@thesquareplanet.com>",
           "Matt McCoy <mattnenterprise@yahoo.com>"]
documentation = "https://docs.rs/imap/"
repository = "https://github.com/jonhoo/rust-imap"
homepage = "https://github.com/jonhoo/rust-imap"
description = "IMAP client for Rust"
license = "Apache-2.0 OR MIT"
edition = "2021"

keywords = ["email", "imap"]
categories = ["email", "network-programming"]

[features]
default = ["native-tls"]
# Used to activate full integration tests when running against a more complete IMAP server
native-tls = []

[dependencies]
tokio-native-tls = { version = "0.3" }
regex = "1.0"
bufstream = "0.1.3"
imap-proto = "0.16.1"
nom = { version = "7.1.0", default-features = false }
base64 = "0.21"
chrono = { version = "0.4", default-features = false, features = ["std"]}
lazy_static = "1.4"
ouroboros = "0.15.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-recursion = "1.0.2"

[dev-dependencies]
lettre = "0.10"
structopt = "0.3"

# to make -Zminimal-versions work
encoding = "0.2.32"
failure = "0.1.8"
mime = "0.3.4"
openssl = "0.10.35"
